# Writer-Assistance

./: .env  .gitignore  LICENSE  README.md  chatbot.py  et --hard f22b1df  latest_plot.txt  main.py  package-lock.json  pyproject.toml
static/: index.html  style.css
